# HS-Wrapper

./: licence  meson.build  meson.options  readme.md
Examples/: meson.build
Examples/SimpleGrep/: main.cpp
HSWrapper/: AbstractHandler.h  Enums.h  Exception.h  Meta.h  Pattern.h  Stream.h
HSWrapper/Compile/: Database.h  PlatformInfo.h
HSWrapper/Compile/src/: Database.cpp  PlatformInfo.cpp
HSWrapper/Runtime/: Scratch.h  Stream.h
HSWrapper/Runtime/src/: Scratch.cpp  Stream.cpp
HSWrapper/src/: Exception.cpp  Meta.cpp  Pattern.cpp  Stream.cpp
Tests/: TestsCore.h  TestsData.h  main.cpp  meson.build
Tests/src/: MetaTest.cpp  SimpleTest.cpp  UseCasesBlockTest.cpp
